--- a/static/index.html
+++ b/static/index.html
@@ -29,22 +29,21 @@
     {{with $device := .Device}}
         <div class="device">
             <div class="name">{{html ($device.Name)}}</div>
-            <div class="loggedin" data.state="{{$device.LoggedIn}}">Device is {{if not $device.LoggedIn }}<b>not</b>{{end}} accessible</div>
-            <div class="lockable" data.state="{{$device.Lockable}}">Device {{if $device.Lockable }}has{{else}}does not have{{end}} a lock code</div>
-            <div class="lastexchange" data.contact="{{$device.LastExchange}}">Last contact: {{$device.LastExchange}}</div>
+            <div class="loggedin" data-state="{{$device.LoggedIn}}">Device is {{if not $device.LoggedIn }}<b>not</b>{{end}} accessible</div>
+            <div class="lockable" data-state="{{$device.Lockable}}">Device {{if $device.Lockable }}has{{else}}does not have{{end}} a lock code</div>
+            <div class="lastexchange" data-contact="{{$device.LastExchange}}">Last contact: {{$device.LastExchange}}</div>
             <ol class="positions">
                 {{range $position := $device.PreviousPositions}}
-                <li data.time="{{$position.Time}}" data.latitude="{{$position.Latitude}}" data.longitude="{{$position.Longitude}}" data.altitude="{{$position.Altitude}}"><a href="http://maps.google.com/maps?hl=en&ll={{$position.Latitude}},{{$position.Longitude}}">Position at {{$position.Time}}</a></li>
+                <li data-time="{{$position.Time}}" data-latitude="{{$position.Latitude}}" data-longitude="{{$position.Longitude}}" data-altitude="{{$position.Altitude}}"><a href="http://maps.google.com/maps?hl=en&ll={{$position.Latitude}},{{$position.Longitude}}">Position at {{$position.Time}}</a></li>
                 {{end}}
             </ol>
             <!-- only display commands that the client specified it accepts
             -->
             <div class="commands">
-                <div class="cmd"><button id="locate">Locate</button></div>
-                <div class="cmd"><button id="message">Send message</button><input name="message"></div>
-                <div class="cmd"><button id="ring">Ring</button><input name="ring_time"></div>
-                <div class="cmd"><button id="lock">Lock</button><input name="code" /></div>
-                <div class="cmd"><button id="erase confirm">Erase</button></div>
+                <div class="cmd"><button data-cmd="t" class="cmdb">Track Location</button><label>Duration (in seconds):<input name="d" placeholder="600"></label></div>
+                <div class="cmd"><button data-cmd="r" class="cmdb">Ring</button><label>Duration (in seconds):<input name="d" placeholder="60"></label></div>
+                <div class="cmd"><button data-cmd="l" class="cmdb">Lock</button><label>Lock Code:<input name="c" placeholder="0123"/></label><label>Lock Screen Message<input name="m" placeholder="Help! I'm lost!"/></label></div>
+                <div class="cmd"><button data-cmd="e" class="cmdb">Erase</button></div>
             </div>
     {{end}}
     {{end}}
@@ -54,6 +53,11 @@
          </footer>
          <script id='bidjs' src="https://login.persona.org/include.js" type="text/javascript"></script>
          <script type="text/javascript">
+
+             function sendCommand(cmd) {
+                 console.debug("Sending", cmd)
+             }
+
 window.addEventListener("load",
         function() {
         body = document.getElementsByTagName("body")[0];
@@ -81,6 +85,28 @@ window.addEventListener("load",
               */
                 }
         })
+
+        cmds = document.getElementsByClassName("cmd");
+        cmdi = cmds.length;
+        for (i=0;i<cmdi;i++) {
+            b = cmds[i].getElementsByTagName("button");
+            bi = b.length;
+            for (j=0;j<bi;j++) {
+                b[j].addEventListener("click",
+                    function(t){
+                    c = t.originalTarget.dataset.cmd;
+                    console.debug(t,c);
+                    args = t.originalTarget.parentElement.getElementsByTagName("input");
+                    largs = args.length;
+                    sargs = {};
+                    for (i=0; i< largs; i++) {
+                        arg=args[i];
+                        sargs[arg.name] = arg.value;
+                        }
+                    sendCommand({c:sargs});
+               })
+           }
+       }
 
         document.getElementById("signin").addEventListener("click",
                 function(){
